--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,9 +4,10 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  /* uncomment for "dark mode"
   background-color: black;
   color: white;
+    /* uncomment for "dark mode"
+
   */
 }
 
@@ -22,3 +23,13 @@ a {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@media (prefers-color-scheme: dark) {
+  html {
+    filter: invert(100%);
+  }
+
+  img {
+    filter: invert(100%);
+  }
+}
